--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/resources/scripts/script.js" defer></script>
     <title>Document</title>
-</head>
-<body>
-    <script src="/resources/scripts/script.js"></script>
-</body>
+  </head>
+  <body>
+    <h1>The Title of Your Webpage</h1>
+    <div id="container">
+      <button id="btn1">Click Me</button>
+      <button id="btn2">Click Me</button>
+      <button id="btn3">Click Me</button>
+    </div>
+  </body>
 </html>
