Just working on tutorials
Nothing to update

--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/resources/scripts/script.js" defer></script>
+    <script src="resources/scripts/script.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <h1>The Title of Your Webpage</h1>
-    <div id="container">
-      <button id="btn1">Click Me</button>
-      <button id="btn2">Click Me</button>
-      <button id="btn3">Click Me</button>
-    </div>
+    <h1>This project should only be used to run js code</h1>
   </body>
 </html>
